# kevinschaul.github.io

./: .Rhistory  .Rprofile  .env.example  .gitignore  .python-version  CNAME  Makefile  README.md  _config.yml  _posts-template.md  astro.config.mjs  conf.py  config.yaml  contact.md  index.html  justfile  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  tsconfig.json
_layouts/: default.html  post.html
_posts/: 2011-11-07-tutorial-web-scraping-with-django.md  2011-11-13-school-district-elections-e28093-from-government-data-to-map.md  2011-12-07-box-chart-maker.md  2012-01-03-editorial-arrogance.md  2012-02-09-pdf-to-searchable-sortable-table.md  2012-03-09-how-we-built-the-same-day-registration-map.md  2012-03-10-tutorial-tilemill-leaflet-and-wax-to-build-interactive-maps.md  2012-04-23-which-legislative-districts-are-vulnerable.md  2012-05-09-would-love-a-map-vikings-stadium-bills.md  2012-07-22-theres-no-such-thing-as-a-professional-photographer.md  2012-07-26-news-app-release-washingtons-local-olympians.md  2012-07-26-why-the-new-census-gov-matters.md  2012-08-08-git-pull-origin-germany_laws.md  2012-08-22-seattle-times-election-guide.md  2012-08-25-stay-classy-seattle.md  2012-09-18-how-software-development-processes-apply-to-new.md  2012-09-28-75-twitter-accounts-every-data-journalist-should-follow.md  2012-10-12-why-i-am-in-this-field.md  2012-11-05-think-graphics-should-be-made-strictly-by-designers.md  2013-02-08-minnesotas-radon-zones.md  2013-02-19-tutorial-create-simple-graphics-with-box-chart-maker.md  2013-03-02-on-ie-and-doing-awesomeness.md  2013-03-14-guns-and-deadly-streets.md  2013-03-26-journalism-side-math.md  2013-04-19-introducing-binify.md  2013-05-14-same-sex-marriage-vote.md  2013-05-28-new-job-new-school-year.md  (+80 more)
about/: index.html
(+1706 files in other folders)
